test/org/midica/testfiles/failing/pattern-inside-block.midica
INCLUDE inc/instruments.midica

{
	0 c /4
	PATTERN
		0 /4
	END
}

